# Compiler-Front-End

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  Makefile  SintaticoMini.cpp  SyntacticParser.cpp  SyntacticParser.h  SyntaticParser.cpp  SyntaticParser.h  grammar.tx  grammar.txt  lexic.cpp  main.cpp  makefile  parser.cpp  syntatic.cpp  test.c  test.txt  test2.txt  token.hpp
.cmake/api/v1/reply/: cache-v2-57f9b0dd325653675bc7.json  cache-v2-b1a54eb1e6b706395eae.json  cache-v2-d515656f04cb32e06b17.json  cmakeFiles-v1-097b4d4aa90f28c50af8.json  cmakeFiles-v1-33ebc663e3aaceeebc8b.json  codemodel-v2-36d30d09deab5a30d2c3.json  codemodel-v2-8e49b3cf35545be9e7f8.json  codemodel-v2-fe1a5a3a64782d75de7d.json  index-2022-07-09T18-45-51-0234.json  index-2022-07-11T23-27-06-0151.json  index-2022-07-12T23-02-03-0149.json  target-Parser-02544f65882eb688eed7.json  target-Parser-072a8aada2d1f345c129.json  target-SyntacticParser-4252963a70557bb2612d.json  target-SyntaticParser-004b654338670564b0d5.json  target-SyntaticParser-b1e12e60273c4e01bc01.json
cmake-build/: Makefile
include/: lexic.h  logger.h  parser.h  semanticV1.h  syntactic.h  syntactic2.h  syntatic.h  syntatic.hpp  token.hpp
src/: lexic.cpp  logger.cpp  semanticV1.cpp  syntactic.cpp  syntactic2.cpp  syntatic.cpp
